# hakyll-sass

./: .travis.yml  hakyll-sass.cabal  stack.yaml
src/Hakyll/Web/: Sass.hs
